 - Digest: JH, Groestl
 - Message authentication code: Blake2, Blake2s
 - Signature: Ed448

New default pseudo-random number generator (os-prng) using the
operating system's PRNG.

Added optimized versions of some common functions for CCL on x86-64
CPUs and for ECL.

Added optimized AES encryption and decryption for SBCL on x86-64 CPUs
with AES-NI support.

Added the constant-time-equal function to check the equality of two
byte arrays (e.g. passwords, MACs) in constant time.

Added the make-message, destructure-message, make-signature and
destructure-signature functions allowing to manage the elements of
messages and signatures returned by encrypt-message and sign-message
by hand if necessary (e.g. to use a different serialization).

Added a unified API for MACs.

Added optimized Blake2s mixing for SBCL on x86-64 CPUs.

* Version 0.34, released 2017-03-07

** bug fixes

Padding issues in 64-bit SHA variants have been fixed.

Compiling with newer versions of SBCL will no longer throw errors due to
a missing SB-BIGNUM:BIGNUM-TYPE.

** new features

Many new algorithms have been added, all by Guillaume LE VAILLANT:
Threefish, Skein, ElGamal, ED25519, Poly1305, Serpent, SHA3, Blake2, and
variants thereof.

CTR mode should be faster on some implementations.  (Thanks to Guillaume
LE VAILLANT.)

* Version 0.33, released 2014-10-15

** bug fixes

Included prng.testvec in the packaged tarball.

The group parameter accessors for DSA keys have been fixed to not throw
errors.  (Thanks to Patrick Stein.)

** new features

The convenience function WITH-DIGESTING-STREAM has been added to the
IRONCLAD package.  (Thanks to Samium Gromoff.)

A new convenience package, IRONCLAD-TEXT, is included with this release;
when loaded, IRONCLAD-TEXT exports the function
WITH-DIGESTING-TEXT-STREAM from the IRONCLAD package.  IRONCLAD-TEXT
depends on FLEXI-STREAMS.  (Thanks to Samium Gromoff.)

The Salsa20 and ChaCha stream ciphers have been added, in full and
reduced-round variants.
