@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ironclad</title>
-<!-- 2017-05-30 mar. 14:08 -->
+<!-- 2017-07-02 dim. 14:11 -->
 <meta  charset="utf-8">
 <meta  name="generator" content="Org-mode">
 <meta  name="author" content="The Ironclad developers">
@@ -1292,6 +1292,39 @@ For RSA keys, the type of the parameters is <code>integer</code>:
 <li><i>d</i>, the private key
 </li>
 </ul>
+</div>
+</div>
+
+<div id="outline-container-sec-8-1-2" class="outline-4">
+<h4 id="sec-8-1-2">Key destructuring</h4>
+<div class="outline-text-4" id="text-8-1-2">
+<p>
+The <a href="#destructure-public-key">destructure-public-key</a> and <a href="#destructure-private-key">destructure-private-key</a> functions can
+be useful if you need to store keys somewhere for future use.
+</p>
+
+<div class="org-src-container">
+
+<pre class="src src-lisp" id="destructure-public-key">(destructure-public-key public-key) =&gt; plist
+</pre>
+</div>
+
+<p>
+Return the elements of a public key in a plist. The indicators of the
+plist match the <i>&amp;key</i> arguments of the <a href="#make-public-key">make-public-key</a> method.
+</p>
+
+
+<div class="org-src-container">
+
+<pre class="src src-lisp" id="destructure-private-key">(destructure-private-key private-key) =&gt; plist
+</pre>
+</div>
+
+<p>
+Return the elements of a private key in a plist. The indicators of the
+plist match the <i>&amp;key</i> arguments of the <a href="#make-private-key">make-private-key</a> method.
+</p>
 </div>
 </div>
 </div>
